--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "file-loader": "^6.1.0",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
+    "jquery": "^3.5.1",
+    "jquery-modal": "^0.9.2",
     "mini-css-extract-plugin": "^0.11.1",
     "pug": "^3.0.0",
     "pug-html-loader": "^1.1.5",
