--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html-webpack-plugin": "^4.4.1",
     "jquery": "^3.5.1",
     "jquery-modal": "^0.9.2",
+    "mburger-css": "^1.3.3",
     "mini-css-extract-plugin": "^0.11.1",
     "pug": "^3.0.0",
     "pug-html-loader": "^1.1.5",
